[package]
name = "bp-sdk"
version = "0.1.0"
edition = "2021"
authors = ["BP-SDK Team"]
description = "Rust wrapper for NASA's ION-DTN Bundle Protocol"
license = "NASA"

[dependencies]
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
parking_lot = "0.12"
async-trait = "0.1"
bytes = { version = "1.0", features = ["serde"] }
hex = "0.4"
rand = "0.8"
ring = "0.17"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
name = "bp_sdk"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
cc = "1.0"

[[bench]]
name = "bp_benchmarks"
harness = false 